Fix Scroll gap area

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,13 +1,13 @@
 page-home {
 
 	.scroll-content{
-		top: 75px;
+		top: 69px;
 		//margin-top: -80px;
 	}
 	.content-md,
 	.content-ios{
 
-		
+
 		&:before{
 			height: 75px;
 			clip-path: none;
